--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
         <div class="container">
             <h3 class="mb-3">video presentation</h3>
             <div class="row">
-                <iframe width="1280" height="720" src="http://www.youtube.com/embed/Z_mGC_FnD1s?autoplay=1&mute=1" frameborder="0" allowfullscreen></iframe>
-
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/Z_mGC_FnD1s?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
     </section>
